--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 allure {
-    version = '2.19.0'
+    version = '2.8.0'
 }
 
 configurations {
@@ -22,7 +22,7 @@ repositories {
 
 dependencies {
     implementation 'io.cucumber:cucumber-java:7.8.1'
-    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.8.1'
+    testImplementation 'io.cucumber:cucumber-junit:7.8.1'
     implementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     implementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
     testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.1'
@@ -31,15 +31,16 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-    testImplementation 'io.qameta.allure:allure-junit5:2.19.0'
-    // implementation 'io.qameta.allure:allure-rest-assured:2.19.0'
+    implementation 'io.qameta.allure:allure-cucumber-jvm:2.8.0'
+    implementation 'io.qameta.allure:allure-rest-assured:2.19.0'
     implementation 'io.rest-assured:rest-assured:5.2.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
     implementation 'io.rest-assured:json-schema-validator:5.2.0'
-
-    // implementation group: 'io.qameta.allure', name: 'allure-cucumber7-jvm', version: '2.19.0'
+    runtimeOnly 'org.aspectj:aspectjweaver:1.9.9.1'
+    runtimeOnly 'org.aspectj:aspectjrt:1.9.9.1'
+    implementation 'io.qameta.allure:allure-cucumber7-jvm:2.19.0'
 
 
 }
